# yaai

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  justfile  mise.toml  package.json  pr-review-feedback.skill
.config/: commitlint.config.mjs  lefthook.json
.github/workflows/: commitlint.yml
apps/cli/: Cargo.toml
apps/cli/src/: config.rs  main.rs
apps/cli/src/commands/: llm.rs  mod.rs  prompt.rs  runner.rs  tui.rs
apps/cli/src/commands/tui/: app.rs  composer.rs  mod.rs  state.rs  terminal.rs
apps/cli/tests/: tui_pty.rs
configs/examples/: coding-agent.yaml  multi-agent.yaml  research-assistant.yaml
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: lib.rs
crates/agent-loop/tests/: agent_loop_tests.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  claude.rs  lib.rs  openai.rs  stub.rs
crates/llm/tests/: stub_tests.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  single.rs
crates/orchestrator/tests/: single.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/src/builtin/: mod.rs  read.rs
crates/tools/tests/: registry_tests.rs
crates/tracer/: Cargo.toml
crates/tracer/src/: lib.rs
crates/tracer/tests/: tracer_tests.rs
demo/: demo.tape
