[workspace]
resolver = "2"
members = [
    "apps/cli",
    "crates/agent-loop",
    "crates/llm",
    "crates/tools",
    "crates/memory",
    "crates/orchestrator",
    "crates/tracer",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web / HTTP
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "1"

# Async traits
async-trait = "0.1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Testing
tempfile = "3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Configuration
config = { version = "0.15", default-features = false, features = ["json5"] }
dirs = "6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
